--- a/package.json
+++ b/package.json
@@ -3,34 +3,34 @@
   "version": "1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.13.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "emailjs-com": "^3.1.0",
+    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-intersection-observer": "^8.32.0",
-    "react-router-dom": "^5.2.0",
+    "react-intersection-observer": "^8.32.5",
+    "react-router-dom": "^6.0.2",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-thanos-snap": "^0.0.7",
-    "styled-components": "^5.3.0",
+    "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2",
-    "workbox-background-sync": "^5.1.4",
-    "workbox-broadcast-update": "^5.1.4",
-    "workbox-cacheable-response": "^5.1.4",
-    "workbox-core": "^5.1.4",
-    "workbox-expiration": "^5.1.4",
-    "workbox-google-analytics": "^5.1.4",
-    "workbox-navigation-preload": "^5.1.4",
-    "workbox-precaching": "^5.1.4",
-    "workbox-range-requests": "^5.1.4",
-    "workbox-routing": "^5.1.4",
-    "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "web-vitals": "^2.1.2",
+    "workbox-background-sync": "^6.4.1",
+    "workbox-broadcast-update": "^6.4.1",
+    "workbox-cacheable-response": "^6.4.1",
+    "workbox-core": "^6.4.1",
+    "workbox-expiration": "^6.4.1",
+    "workbox-google-analytics": "^6.4.1",
+    "workbox-navigation-preload": "^6.4.1",
+    "workbox-precaching": "^6.4.1",
+    "workbox-range-requests": "^6.4.1",
+    "workbox-routing": "^6.4.1",
+    "workbox-strategies": "^6.4.1",
+    "workbox-streams": "^6.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
